# Orchestrix-Engine

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 001_initial_schema.py  002_phase2_phase3.py
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  api.ts  index.css
dashboard/src/pages/: Jobs.tsx  RunDetail.tsx  Workers.tsx  Workflows.tsx
docs/screenshots/: README.md
scripts/: demo.sh
src/orchestrix/: auth.py  cli.py  config.py  cron.py  database.py  scheduler.py  schemas.py  telemetry.py  websocket.py
src/orchestrix/api/: app.py  auth.py  events.py  jobs.py  metrics.py  workers.py  workflows.py  ws.py
src/orchestrix/engine/: core.py  priority.py  retry.py  workflows.py
src/orchestrix/models/: enums.py  tables.py
src/orchestrix/worker/: __main__.py  handlers.py  process.py
tests/: conftest.py  test_api.py  test_core.py  test_cron.py  test_workflows.py
